--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Ankush <ankush357159@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 djangorestframework = "^3.13.1"
+Pillow = "^9.0.0"
+djangorestframework-simplejwt = "^5.0.0"
 
 [tool.poetry.dev-dependencies]
 
